# Telegram-LanguageML

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
resources/: idf.txt
src/: CMakeLists.txt  tglang-tester.c  tglang-trainer.cpp  tglang.c  tglang.cpp  tglang.h  vectorizer.cpp  vectorizer.h  weights.h
src/random-forest/: decision-trees.hxx
test/: CMakeLists.txt  test.py  tglang-tester.c  tglang.h
train/: .gitignore  convert.py  test.py  train.py
train/data/github/: create-dataset.ipynb  languages.json  preprocess.py
train/data/notebooks/: dataset.ipynb
train/data/rosetta-code/: preprocess.py
train/data/telegram/: preprocess.py
train/notebooks/: evaluate.ipynb
train/notebooks/github/: languages.json
train/utils/: __init__.py  export.py  language.py  preprocess.py
